<resources>
    <string name="app_name">ToyLoginWork</string>
    <string name="login">로그인</string>
    <string name="signin">가입</string>
    <string name="nickname">닉네임</string>
    <string name="pw">비밀번호</string>
    <string name="intro">소개</string>
    <string name="card_title">인기 카드 : 카드를 클릭해보세요.</string>
    <string name="user_title">인기 유저 : 유저를 클릭해보세요.</string>
    <string name="detail_card_title">추천 카드 : 카드를 클릭해보세요.</string>
    <string name="fail">요청 실패</string>
    <string name="empty_nick">닉네임을 입력해주세요.</string>
    <string name="empty_intro">소개글을 입력해주세요.</string>
    <string name="default_nickname">닉네임:</string>
    <string name="default_intro">소개:</string>
    <string name="default_card_detail">카드 설명:</string>

</resources>