<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/purple_200"
            app:contentInsetStart="0dp"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/sl_detail_card"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/iv_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/default_card_detail"
                    app:layout_constraintTop_toBottomOf="@+id/iv_detail" />

                <include
                    android:id="@+id/view_1"
                    layout="@layout/divider_view"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_detail" />

                <TextView
                    android:id="@+id/tv_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/default_nickname"
                    app:layout_constraintTop_toBottomOf="@+id/view_1" />

                <TextView
                    android:id="@+id/tv_intro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/default_intro"
                    app:layout_constraintTop_toBottomOf="@+id/tv_user" />

                <include
                    android:id="@+id/view_2"
                    layout="@layout/divider_view"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_intro" />

                <TextView
                    android:id="@+id/tv_detail_card_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_card_title"
                    app:layout_constraintTop_toBottomOf="@+id/view_2" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_detail_picture"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintTop_toBottomOf="@+id/tv_detail_card_title" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>